메인화면 구성+구글로그인 셋팅

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Books_Ko</string>
+    <!--  앱제목  -->
+    <string name="app_title">Books</string>
+    <!--  서버주소 -->
+    <string name="server_url">https://appbook.dosymmm.ga/</string>
 </resources>
