오류 : trust anchor for certification path not found 해결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <!--  앱제목  -->
     <string name="app_title">Books</string>
     <!--  서버주소 -->
-    <string name="server_url">https://appbook.dosymmm.ga/</string>
+    <string name="server_url">https://books.dosymmm.ga/</string>
 </resources>
