--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="no_send_email">전송된 인증코드가 없습니다</string>
     <string name="login_ok">로그인 되었습니다.</string>
     <string name="profile_img_update_ok">프로필 이미지가 성공적으로 변경되었습니다</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
