--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="profile_img_update_ok">프로필 이미지가 성공적으로 변경되었습니다</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--  platform type  -->
+    <string name="normal">normal</string>
+    <string name="google">google</string>
 </resources>
