액티비티 생성(Activity_Book_Search), 도서 가져오기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
     <!--  platform type  -->
     <string name="normal">normal</string>
     <string name="google">google</string>
+
+    <!--
+    카카오 관련 키
+    -->
+    <!-- REST API -->
+    <string name="kakao_restapi">6c7ae160cacb9ea503f1cac5d85be19a</string>
+    <string name="Authorization">KakaoAK 6c7ae160cacb9ea503f1cac5d85be19a</string>
 </resources>
