검색한 도서 저장_저장된 도서인지 확인, 팝업 뜨게 하기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <!-- REST API -->
     <string name="kakao_restapi">6c7ae160cacb9ea503f1cac5d85be19a</string>
     <string name="Authorization">KakaoAK 6c7ae160cacb9ea503f1cac5d85be19a</string>
+    <string name="before_add_book">이미 등록되어 있는 도서입니다</string>
 </resources>
