팔로우관리_액티비티 초기, 이메일, 버튼

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,10 @@ startActivityForResult
     -->
     <string name="delete">삭제</string>
     <string name="update">수정</string>
+
+    <!--
+     색상 : 선택 / 비선택
+     -->
+    <string name="choose_true">#afe3ff</string>
+    <string name="choose_false">#a0a0a0</string>
 </resources>
