--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_title">Books</string>
     <!--  서버주소 -->
     <string name="server_url">https://books.dosymmm.ga/</string>
+    <string name="server_url_rearNotSlash">https://books.dosymmm.ga</string>
     <!--
     확인문구
     -->
